--- a/PI_DEV/app/config/config.yml
+++ b/PI_DEV/app/config/config.yml
@@ -3,7 +3,8 @@ imports:
     - { resource: security.yml }
     - { resource: services.yml }
     - { resource: "@FixBundle/Resources/config/services.yml" }
-    - { resource: "@CvBundle/Resources/config/services.yml" }
+    - { resource: "@JobpostsBundle/Resources/config/services.yml" }
+
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -61,6 +62,10 @@ doctrine:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        dql:
+            datetime_functions:
+                strtodate: DoctrineExtensions\Query\Mysql\StrToDate
+
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -77,18 +82,3 @@ fos_user:
     from_email:
         address: "fradj.mili@esprit.tn"
         sender_name: "mili_fradj"
-
-knp_paginator:
-    page_range: 5                       # number of links showed in the pagination menu (e.g: you have 10 pages, a page_range of 3, on the 5th page you'll see links to page 4, 5, 6)
-    default_options:
-        page_name: page                 # page query parameter name
-        sort_field_name: sort           # sort field query parameter name
-        sort_direction_name: direction  # sort direction query parameter name
-        distinct: true                  # ensure distinct results, useful when ORM queries are using GROUP BY statements
-        filter_field_name: filterField  # filter field query parameter name
-        filter_value_name: filterValue  # filter value query parameter name
-    template:
-        pagination: '@KnpPaginator/Pagination/sliding.html.twig'     # sliding pagination controls template
-        sortable: '@KnpPaginator/Pagination/sortable_link.html.twig' # sort link template
-        filtration: '@KnpPaginator/Pagination/filtration.html.twig'  # filters template
-
