--- a/PI_DEV/app/config/services.yml
+++ b/PI_DEV/app/config/services.yml
@@ -1,9 +1,18 @@
 # Learn more about services, parameters and containers at
 # https://symfony.com/doc/current/service_container.html
 parameters:
+    app.path.article_images: /uploads/images/article
     #parameter_name: value
 
 services:
+    app.form.registration:
+        class: AppBundle\Form\RegistrationType
+        tags:
+        - { name: form.type, alias: app_user_registration }
+        app.form.login:
+            class: AppBundle\Form\LoginType
+            tags:
+            - { name: form.type, alias: app_user_login }
     # default configuration for services in *this* file
     _defaults:
         # automatically injects dependencies in your services
